--- a/outgoingemaildata.html
+++ b/outgoingemaildata.html
@@ -1,13 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Outgoing Email Data</title>
+<title>Outgoing Email Data</title>
 </head>
 <body>
 <center>
-    <h1>Outgoing Email Data</h1>
-    <img src="outgoingemaildata.PNG" alt="outgoing mail" style="width:auto;">
+<h1>
+Outgoing Email Data
+</h1>
+<h2>
+<a href=/emailoutgoingdata/week1.html>Week 1</a><br><a href=/emailoutgoingdata/week2.html>Week 2</a><br><a href=/emailoutgoingdata/week3.html>Week 3</a><br><a href=/emailoutgoingdata/week4.html>Week 4</a><br><a href=/emailoutgoingdata/week5.html>Week 5</a><br><a href=/emailoutgoingdata/week6.html>Week 6</a><br><a href=/emailoutgoingdata/week7.html>Week 7</a><br><a href=/emailoutgoingdata/week8.html>Week 8</a><br><a href=/emailoutgoingdata/week9.html>Week 9</a><br><a href=/emailoutgoingdata/week10.html>Week 10</a><br><a href=/emailoutgoingdata/week11.html>Week 11</a><br><a href=/emailoutgoingdata/week12.html>Week 12</a><br><a href=/emailoutgoingdata/week13.html>Week 13</a><br>
+</h2>
 </center>
 </body>
 </html>
