--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <p>
 Six people have reported having their identities stolen in the past day in the same town. The six people only have one person in common on social media: Jane Goodall. Jane Goodall is the prime suspect and we have pulled her public records in order to start our investigation.  You have Jane’s public twitter and facebook page, along with all her email data recently opened files and computer information. If she committed the crime, we need you to find the evidence to lock her away.
 </p>
-
-<a href="recentlyopenedfiles.html">Recently Opened Files</a>
-
+<center>
+<a href="recentlyopenedfiles.html">Recently Opened Files</a><br>
+<a href="outgoingemaildata.html">Outgoing Email Data</a>
+</center>
 </body>
 </html>
