--- a/securityquestions.html
+++ b/securityquestions.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Security Questions</title>
+    <link rel="stylesheet" href="hack.css">
 </head>
 <body>
 <p>
-    If you can correctly deduce what the answers are for a security question, your team will gain access to that password.
+    If you can correctly deduce the answers for ALL the security questions, your team will gain access to a list of passwords.
 </p>
 
 <p>
