--- a/recentlyopenedfiles/july17.html
+++ b/recentlyopenedfiles/july17.html
@@ -1,18 +1,57 @@
-
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>july17</title>
-<link rel="stylesheet" href="hack.css">
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>July 17th</title>
+    <link rel="stylesheet" href="hack.css">
 </head>
 <body>
-<center>
-<h1>
-July 17
-</h1>
-<h2>
-No files opened on this day.
-</h2>
-</center>
+<p>
+Recently Opened File Information:
+Fall_2016.jpg
+Threat Level: Low
+Picture file in the jpg format. Contains no hidden code.
+</p>
+
+<p>
+lessonPlan14.doc
+Threat Level: Low
+Document file used for word processing. Contains no hidden code.
+</p>
+
+<p>
+lessonPlan13.doc
+Threat Level: Low
+Document file used for word processing. Contains no hidden code.
+
+<p>
+Lesson_details.doc.sr
+Threat Level: High
+Executable that installs a keylogger and sniffs the web browser for social media websites.
+
+Code Snippet
+
+post_twitter()
+{
+cout<<pull_generic_quote();
+cout<<” bit.ly/
+}
+</p>
+
+<p>
+install.exe
+Threat Level: Medium
+Executable that installs adware that will randomly display ads when surfing the web.
+
+Code Snippet
+
+random_ad()
+{
+randomNum=numBetween(60, 600);
+when(time==randomNum)
+display_Ad();
+}
+</p>
+
 </body>
 </html>
