--- a/incomingmail.html
+++ b/incomingmail.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Incoming Mail</title>
+    <link rel="stylesheet" href="hack.css">
 </head>
 <body>
 <center>
