--- a/main.html
+++ b/main.html
@@ -14,19 +14,22 @@ Six people have reported having their identities stolen in the past day in the s
         Puzzles
     </h1>
     <a href="securityquestions.html">Security Questions</a><br><br>
-    <a href="#">Password Generator (Need all security questions unlocked)</a><br><br>
+    <a href="passwordgenerator.html">Password Generator (Need all security questions unlocked)</a><br><br>
     <a href="#">Database Removal</a><br><br>
-    <a href="#">Unknown 1</a><br><br>
+    <a href="binaryanalysiis.html">Bank Pin - Binary Analysis</a><br><br>
     <a href="#">Unknown 2</a><br><br>
 
 
     <h1>
         Data Files
     </h1>
-    <a href="recentlyopenedfiles.html">Recently Opened Files</a><br><br>
-    <a href="outgoingemaildata.html">Outgoing Email Data</a><br><br>
     <a href="facebook.html">Jane Goodall Facebook</a><br><br>
-    <a href="twitter.htmll">Jane Goodall Twitter</a><br><br>
+    <a href="twitter.html">Jane Goodall Twitter</a><br><br>
+    <a href="incomingmail.html">Incoming Email Data</a><br><br>
+    <a href="selectemails.html">Select Emails</a><br><br>
+    <a href="outgoingemaildata.html">Outgoing Email Data</a><br><br>
+    <a href="recentlyopenedfiles.html">Recently Opened Files</a><br><br>
+    <a href="computerspecs.html">Computer Specs</a><br><br>
 </center>
 </body>
 </html>
