--- a/passwordgenerator.html
+++ b/passwordgenerator.html
@@ -16,18 +16,21 @@
         A-Z means any capital letter from the alphabet.<br>
         0-9 means any digit.<br>
         a-z means any lower-case letter from the alphabet.<br>
+    </p>
+    <p>
         There are certain rules for the password to be accepted.<br>
     </p>
     <img src="loopexample.PNG">
     <p>
-        In a loop any quantity of letters or digits can be used several times. In this loop the beavers are allowed to use zero, one or more capital letters.
+        In a loop any quantity of letters or digits can be used several times. In this loop you are allowed to use zero, one or more capital letters.
     </p>
     <img src="edge%20example.PNG">
     <p>
-        An edge means that the beavers have to use exactly one letter or digit. This edge demands one lower-case letter.
+        An edge means that the you have to use exactly one letter or digit. This edge demands one lower-case letter.
     </p>
 
     <center>
+        <h2>Jane's Password Model</h2>
         <img src="passwordgeneratorexample.PNG">
     </center>
 </body>
