--- a/securityquestions.html
+++ b/securityquestions.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <p>
-    If you can correctly deduce the answers for ALL the security questions, your team will gain access to a list of passwords.
+    If you can correctly deduce the answers for ALL the security questions for Jane Goodall, your team will gain access to a list of passwords.
 </p>
 
 <p>
@@ -17,12 +17,12 @@ What is your favorite movie?
 
 <p>
 Facebook<br>
-What is your mother’s maiden name?
+What did you want to be when you grew up?
 </p>
 
 <p>
 Email<br>
-What is your favorite color?
+What is your favorite album?
 </p>
 
 </body>
