--- a/computerspecs.html
+++ b/computerspecs.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Computer Specs</title>
+    <link rel="stylesheet" href="hack.css">
 </head>
 <body>
 <p>
