--- a/incomingmail.html
+++ b/incomingmail.html
@@ -10,5 +10,9 @@
     <h1>Incoming Mail Box</h1>
     <img src="incomingmail.PNG" alt="incoming mail" style="width:auto;">
 </center>
+<h1>Incoming Emails</h1>
+<a href="/incomingemails/email4.html">From: Capital One</a><br>
+<a href="/incomingemails/email7.html">From: Kelly Kluthe</a><br>
+<a href="/incomingemails/email910.html">From: Ben Casey</a><br>
 </body>
 </html>
