--- a/main.html
+++ b/main.html
@@ -4,32 +4,49 @@
     <meta charset="UTF-8">
     <title>Cyber Security Break In</title>
     <link rel="stylesheet" href="hack.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<h2>
+    Case Details
+</h2>
 <p>
 Six people have reported having their identities stolen in the past day in the same town. The six people only have one person in common on social media: Jane Goodall. Jane Goodall is the prime suspect and we have pulled her public records in order to start our investigation.  You have Jane’s public twitter and facebook page, along with all her email data recently opened files and computer information. If she committed the crime, we need you to find the evidence to lock her away.
 </p>
-<center>
+
+<p>
+    <u>Evidence Needed:</u><br>
+
+    1. 3 Security Question Answers<br>
+    2. Jane's password<br>
+    3. Virus used<br>
+    4. 4 Digit Bank Pin<br>
+    5. Shortest Path to Database<br>
+    6. Network Flow<br>
+</p>
+
+<div class="split left">
     <h1>
-        Puzzles
+        Mysteries
     </h1>
     <a href="securityquestions.html">Security Questions</a><br><br>
     <a href="passwordgenerator.html">Password Generator (Need all security questions unlocked)</a><br><br>
-    <a href="#">Database Removal</a><br><br>
+    <a href="virushacks.html">Virus and Hacks Reference Sheet</a><br><br>
     <a href="binaryanalysiis.html">Bank Pin - Binary Analysis</a><br><br>
-    <a href="#">Unknown 2</a><br><br>
-
-
+    <a href="#">Database Analysis</a><br><br>
+    <a href="#">Network Flow</a><br><br>
+</div>
+<div class="split right">
     <h1>
         Data Files
     </h1>
     <a href="facebook.html">Jane Goodall Facebook</a><br><br>
     <a href="twitter.html">Jane Goodall Twitter</a><br><br>
     <a href="incomingmail.html">Incoming Email Data</a><br><br>
-    <a href="selectemails.html">Select Emails</a><br><br>
     <a href="outgoingemaildata.html">Outgoing Email Data</a><br><br>
     <a href="recentlyopenedfiles.html">Recently Opened Files</a><br><br>
     <a href="computerspecs.html">Computer Specs</a><br><br>
-</center>
+</div>
+
 </body>
 </html>
