--- a/outgoingemaildata.html
+++ b/outgoingemaildata.html
@@ -6,13 +6,24 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<center>
+
 <h1>
 Outgoing Email Data
 </h1>
 <h2>
-<a href=/emailoutgoingdata/week1.html>Week 1</a><br><a href=/emailoutgoingdata/week2.html>Week 2</a><br><a href=/emailoutgoingdata/week3.html>Week 3</a><br><a href=/emailoutgoingdata/week4.html>Week 4</a><br><a href=/emailoutgoingdata/week5.html>Week 5</a><br><a href=/emailoutgoingdata/week6.html>Week 6</a><br><a href=/emailoutgoingdata/week7.html>Week 7</a><br><a href=/emailoutgoingdata/week8.html>Week 8</a><br><a href=/emailoutgoingdata/week9.html>Week 9</a><br><a href=/emailoutgoingdata/week10.html>Week 10</a><br><a href=/emailoutgoingdata/week11.html>Week 11</a><br><a href=/emailoutgoingdata/week12.html>Week 12</a><br><a href=/emailoutgoingdata/week13.html>Week 13</a><br>
+    <a href=/emailoutgoingdata/week1.html>Week 1</a>  6/1-6/7<br>
+    <a href=/emailoutgoingdata/week2.html>Week 2</a>  6/8 - 6/14<br>
+    <a href=/emailoutgoingdata/week3.html>Week 3</a>  6/15 - 6/21<br>
+    <a href=/emailoutgoingdata/week4.html>Week 4</a>  6/22 - 6/30<br>
+    <a href=/emailoutgoingdata/week5.html>Week 5</a>  7/1 - 7/7<br>
+    <a href=/emailoutgoingdata/week6.html>Week 6</a>  7/8 - 7/14<br>
+    <a href=/emailoutgoingdata/week7.html>Week 7</a>  7/15 - 7/22<br>
+    <a href=/emailoutgoingdata/week8.html>Week 8</a>  7/23 - 7/31<br>
+    <a href=/emailoutgoingdata/week9.html>Week 9</a>  8/1 - 8/7<br>
+    <a href=/emailoutgoingdata/week10.html>Week 10</a>  8/8 - 8/14<br>
+    <a href=/emailoutgoingdata/week11.html>Week 11</a>  8/15 - 8/22<br>
+    <a href=/emailoutgoingdata/week12.html>Week 12</a>  8/23-8/31<br>
 </h2>
-</center>
+
 </body>
 </html>
