--- a/recentlyopenedfiles/july17.html
+++ b/recentlyopenedfiles/july17.html
@@ -6,51 +6,39 @@
     <link rel="stylesheet" href="hack.css">
 </head>
 <body>
+<h1>July 17th</h1>
 <p>
-Recently Opened File Information:
-Fall_2016.jpg
-Threat Level: Low
-Picture file in the jpg format. Contains no hidden code.
+Fall_2016.jpg<br>
+Threat Level: Low<br>
+Picture file in the jpg format. Contains no hidden code.<br>
 </p>
 
 <p>
-lessonPlan14.doc
-Threat Level: Low
-Document file used for word processing. Contains no hidden code.
+lessonPlan14.doc<br>
+Threat Level: Low<br>
+Document file used for word processing. Contains no hidden code.<br>
 </p>
 
 <p>
-lessonPlan13.doc
-Threat Level: Low
-Document file used for word processing. Contains no hidden code.
+lessonPlan13.doc<br>
+Threat Level: Low<br>
+Document file used for word processing. Contains no hidden code.<br>
 
 <p>
-Lesson_details.doc.sr
-Threat Level: High
-Executable that installs a keylogger and sniffs the web browser for social media websites.
+Lesson_details.doc.sr<br>
+Threat Level: High<br>
+Executable that installs a keylogger and sniffs the web browser for social media websites.<br>
 
-Code Snippet
+<img src="lesson_detail_code.png">
 
-post_twitter()
-{
-cout<<pull_generic_quote();
-cout<<” bit.ly/
-}
 </p>
 
 <p>
-install.exe
-Threat Level: Medium
-Executable that installs adware that will randomly display ads when surfing the web.
+install.exe<br>
+Threat Level: Medium<br>
+Executable that installs adware that will randomly display ads when surfing the web.<br>
 
-Code Snippet
-
-random_ad()
-{
-randomNum=numBetween(60, 600);
-when(time==randomNum)
-display_Ad();
-}
+<img src="installexe_code.png">
 </p>
 
 </body>
