--- a/main.html
+++ b/main.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Cyber Security Break In</title>
     <link rel="stylesheet" href="hack.css">
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h2>
@@ -33,8 +32,8 @@ Six people have reported having their identities stolen in the past day in the s
     <a href="passwordgenerator.html">Password Generator (Need all security questions unlocked)</a><br><br>
     <a href="virushacks.html">Virus and Hacks Reference Sheet</a><br><br>
     <a href="binaryanalysiis.html">Bank Pin - Binary Analysis</a><br><br>
-    <a href="#">Database Analysis</a><br><br>
-    <a href="#">Network Flow</a><br><br>
+    <a href="databaseanalysis.html">Database Analysis</a><br><br>
+    <a href="networkflow.html">Network Flow</a><br><br>
 </div>
 <div class="split right">
     <h1>
