--- a/binaryanalysiis.html
+++ b/binaryanalysiis.html
@@ -10,7 +10,7 @@
     Four Digit Pin - Binary Analysis
 </h1>
 <p>
-The password has been encrypted using a four digit pin. You must use the analyze the table below in order to figure out the four digit pin.
+The password has been encrypted using a four digit pin. You must analyze the table below in order to figure out the four digit pin.
 </p>
 <center>
     <img src="binaryanalysis.PNG">
