--- a/binaryanalysiis.html
+++ b/binaryanalysiis.html
@@ -10,7 +10,7 @@
     Four Digit Pin - Binary Analysis
 </h1>
 <p>
-The password has been encrypted using a four digit pin. You must analyze the table below in order to figure out the four digit pin.
+The password has been encrypted using a four digit pin. You must analyze the table below in order to figure out the four digit pin. You do not need to know binary, you should look for patterns in each row. Think of "00000" as even.
 </p>
 <center>
     <img src="binaryanalysis.PNG">
