--- a/virushacks.html
+++ b/virushacks.html
@@ -19,7 +19,7 @@ The attacker sends an email claiming to come from a recognized source asking you
 </p>
 <p><u>Melissa Virus</u></p>
 <p>
-    Sends an email with the subject that includes the words “Important message from” that includes an attachment that has a .vbs extension.
+    Sends an email with the subject that includes the words “Important message from” or "Urgent" that includes an attachment that has a .vbs extension.
 
 </p>
 <p><u>MyDoom</u></p>
