--- a/networkflow.html
+++ b/networkflow.html
@@ -8,6 +8,10 @@
 <body>
 <h1>Network Flow Graph</h1>
 <p>Below is a breakdown of network flow between the hackers computer (A) and Jane's computer (B). We need to know what is the total network flow going from A to B.</p>
+<p>Example</p>
+<p>Flow: 15</p>
 <img src="networkflowgraph.PNG">
+<p>Flow from the hacker's device to Jane's</p>
+<p>Need to insert here</p>
 </body>
 </html>
