--- a/recentlyopenedfiles/july17.html
+++ b/recentlyopenedfiles/july17.html
@@ -25,7 +25,7 @@ Threat Level: Low<br>
 Document file used for word processing. Contains no hidden code.<br>
 
 <p>
-Lesson_details.doc.sr<br>
+Lesson_details.doc.vbs<br>
 Threat Level: High<br>
 Executable that installs a keylogger and sniffs the web browser for social media websites.<br>
 
