--- a/networkflow.html
+++ b/networkflow.html
@@ -12,6 +12,6 @@
 <p>Flow: 15</p>
 <img src="networkflowgraph.PNG">
 <p>Flow from the hacker's device to Jane's</p>
-<p>Need to insert here</p>
+<img src="flow1.png">
 </body>
 </html>
