--- a/securityquestions.html
+++ b/securityquestions.html
@@ -7,21 +7,21 @@
 </head>
 <body>
 <p>
-    If you can correctly deduce the answers for ALL the security questions for Jane Goodall, your team will gain access to a list of passwords.
+    If you can correctly deduce the answers for ALL the security questions for Jane Goodall from the data files provided, your team will gain access to a list of possible passwords.
 </p>
 
 <p>
-Twitter<br>
+Question 1<br>
 What is your favorite movie?
 </p>
 
 <p>
-Facebook<br>
+Question 2<br>
 What did you want to be when you grew up?
 </p>
 
 <p>
-Email<br>
+Question 3<br>
 What is your favorite album?
 </p>
 
