--- a/virushacks.html
+++ b/virushacks.html
@@ -12,7 +12,7 @@
 The attacker sends an email claiming to come from a recognized source asking you to verify your account, re-enter information or make a payment. The point is to trick you into providing details needed to get into your account.
 </p>
 
-<p><u>Email Viruses</u></p>
+<h1><u>Email Viruses</u></h1>
 <p><u>ILOVEYOU</u></p>
 <p>
     Sends an email with the subject ILOVEYOU with an attachment that claims it is a love letter specifically for you. The attachment often has a .vbs extension.
@@ -30,6 +30,8 @@ The attacker sends an email claiming to come from a recognized source asking you
 <p>
     Subject of the email makes it look like it is in response to another email or something important. (Ex. Re: Thank you! Re: Your application, Urgent, Re: Movie). The attached file can have a variety of obscure file extensions.
 </p>
+<p><u>Reference Sheet</u></p>
+<p>x indicates that system or function is vulnerable to the email virus</p>
 <center><img src="vectorchart.PNG"></center>
 </body>
 </html>
