--- a/main.html
+++ b/main.html
@@ -12,30 +12,34 @@
 <p>
 Six people have reported having their identities stolen in the past day in the same town. The six people only have one person in common on social media: Jane Goodall. Jane Goodall is the prime suspect and we have pulled her public records in order to start our investigation.  You have Jane’s public twitter and facebook page, along with all her email data recently opened files and computer information. If she committed the crime, we need you to find the evidence to lock her away.
 </p>
-
+<div class="split left">
 <p>
     <u>Evidence Needed:</u><br>
 
     1. 3 Security Question Answers<br>
     2. Jane's password<br>
-    3. Virus used<br>
-    4. Shortest Path to Database<br>
-    5. Network Flow<br>
-    6. 4 Digit Bank Pin<br>
-</p>
+    3. Shortest Path to Database<br>
+    4. Network Flow<br>
+    5. 4 Digit Bank Pin<br>
+    6. Virus used<br>
+    <br>
+    <a href="virushacks.html">Virus and Hacks Reference Sheet</a> Use this reference and the data files to figure out what virus was used in this hack.<br><br>
 
-<div class="split left">
     <h1>
         Mysteries
     </h1>
     <a href="securityquestions.html">Security Questions</a><br><br>
     <a href="passwordgenerator.html">Password Generator (Need all security questions unlocked)</a><br><br>
-    <a href="virushacks.html">Virus and Hacks Reference Sheet</a><br><br>
     <a href="databaseanalysis.html">Database Analysis</a><br><br>
     <a href="networkflow.html">Network Flow</a><br><br>
     <a href="binaryanalysiis.html">Bank Pin - Binary Analysis</a><br><br>
+
+</p>
 </div>
 <div class="split right">
+    <br>
+    <iframe src="https://docs.google.com/spreadsheets/d/1rpDSQIrC7pckUwM2G4dTBLvnp8qATHdgoGEeAY9abRM/htmlembed/sheet?gid=0&range=A1:B8" width="400" height="180"></iframe>
+   <br><br><br><br>
     <h1>
         Data Files
     </h1>
@@ -46,6 +50,5 @@ Six people have reported having their identities stolen in the past day in the s
     <a href="recentlyopenedfiles.html">Recently Opened Files</a><br><br>
     <a href="computerspecs.html">Computer Specs</a><br><br>
 </div>
-
 </body>
 </html>
