--- a/main.html
+++ b/main.html
@@ -6,49 +6,36 @@
     <link rel="stylesheet" href="hack.css">
 </head>
 <body>
+<p>
+    Below you can find links to the different challenges that you need to solve. You are able to tackle these in any order you wish. Your proctor will keep track of your
+    successful answers on the left. For a few of the puzzles, the information is in the data files. Everything you need to answer the questions are included on this site.
+</p>
 <h2>
     Case Details
 </h2>
 <p>
-Six people have reported having their identities stolen in the past day in the same town. The six people only have one person in common on social media: Jane Goodall. Jane Goodall is the prime suspect and we have pulled her public records in order to start our investigation.  You have Jane’s public twitter and facebook page, along with all her email data recently opened files and computer information. If she committed the crime, we need you to find the evidence to lock her away.
+    Six people have had their identities stolen in the same small town. They all have exactly one person in common via social media: Jane Goodall. We believe Jane may have been hacked. We need to uncover several pieces of evidence to build a case. Your overall goal will be to figure out the exact hack used along with several supporting items.
 </p>
 <div class="split left">
 <p>
-    <u>Evidence Needed:</u><br>
+    Evidence Needed:<br><br>
 
-    1. 3 Security Question Answers<br>
-    2. Jane's password<br>
-    3. Shortest Path to Database<br>
-    4. Network Flow<br>
-    5. 4 Digit Bank Pin<br>
-    6. Virus used<br>
-    <br>
-    <a href="virushacks.html">Virus and Hacks Reference Sheet</a> Use this reference and the data files to figure out what virus was used in this hack.<br><br>
-
-    <h1>
-        Mysteries
-    </h1>
-    <a href="securityquestions.html">Security Questions</a><br><br>
-    <a href="passwordgenerator.html">Password Generator (Need all security questions unlocked)</a><br><br>
     <a href="databaseanalysis.html">Database Analysis</a><br><br>
     <a href="networkflow.html">Network Flow</a><br><br>
-    <a href="binaryanalysiis.html">Bank Pin - Binary Analysis</a><br><br>
+    <a href="securityquestions.html">Security Questions</a><br><br>
+    <a href="virushacks.html">Virus and Hacks Reference Sheet</a><br>
+    Use this reference and the data files to figure<br> out what virus was used in this hack.<br><br>
+    <a href="binaryanalysiis.html">Bank Pin</a><br><br>
 
 </p>
 </div>
 <div class="split right">
     <br>
     <iframe src="https://docs.google.com/spreadsheets/d/1rpDSQIrC7pckUwM2G4dTBLvnp8qATHdgoGEeAY9abRM/htmlembed/sheet?gid=0&range=A1:B8" width="400" height="180"></iframe>
-   <br><br><br><br>
+   <br><br>
     <h1>
-        Data Files
+        <a href="datafiles.html">Data Files</a>
     </h1>
-    <a href="facebook.html">Jane Goodall Facebook</a><br><br>
-    <a href="twitter.html">Jane Goodall Twitter</a><br><br>
-    <a href="incomingmail.html">Incoming Email Data</a><br><br>
-    <a href="outgoingemaildata.html">Outgoing Email Data</a><br><br>
-    <a href="recentlyopenedfiles.html">Recently Opened Files</a><br><br>
-    <a href="computerspecs.html">Computer Specs</a><br><br>
 </div>
 </body>
 </html>
