--- a/passwordgenerator.html
+++ b/passwordgenerator.html
@@ -31,6 +31,17 @@
 
     <center>
         <h2>Jane's Password Model</h2>
+        <p>Example of passwords that work:<br>
+            1. Aaabz0AAa
+            2. 03aa
+            3. 0Aa6
+        </p>
+        <p>
+            Example of passwords that don't work:<br>
+            1. 0AAaa6
+            2. 0aAAAAaaa
+            3. 063A636
+        </p>
         <img src="passwordgeneratorexample.PNG">
     </center>
 </body>
