--- a/securityquestions.html
+++ b/securityquestions.html
@@ -7,9 +7,13 @@
 </head>
 <body>
 <p>
-    If you can correctly deduce the answers for ALL the security questions for Jane Goodall from the data files provided, your team will gain access to a list of possible passwords.
+    First, you need to answer all of the security questions. You should be able to figure out the answers for the questions by searching through the <a href="datafiles.html">data files.</a>
+    Let your proctor know when you think you have an answer, but be careful since you will be penalized for each wrong answer.
 </p>
-
+<p>
+    Once you have successful deduced all 3 security questions, you will get a list of passwords needed for the second part.=
+</p>
+<hr>
 <p>
 Question 1<br>
 What is your favorite movie?
@@ -24,6 +28,8 @@ What did you want to be when you grew up?
 Question 3<br>
 What is your favorite album?
 </p>
-
+<br>
+<h3>Part 2 - Jane's Password</h3>
+<a href="passwordgenerator.html">Password Machine</a>
 </body>
 </html>
