--- a/virushacks.html
+++ b/virushacks.html
@@ -7,12 +7,8 @@
 </head>
 <body>
 <h1>Virus and Hacks Reference Sheet</h1>
-<p><u>Phisphing</u></p>
-<p>
-The attacker sends an email claiming to come from a recognized source asking you to verify your account, re-enter information or make a payment. The point is to trick you into providing details needed to get into your account.
-</p>
-
-<h1><u>Email Viruses</u></h1>
+<p>Using the information below and the information found in the <a href="datafiles.html">Data Files</a>, you need to identify which virus out of the four infected Jane Goodall. </p>
+<h3>Email Viruses</h3>
 <p><u>ILOVEYOU</u></p>
 <p>
     Sends an email with the subject ILOVEYOU with an attachment that claims it is a love letter specifically for you. The attachment often has a .vbs extension.
